--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1",
+    "gsap": "^3.8.0",
     "js-cookie": "^2.2.1",
     "keen-slider": "^5.5.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ticker": "^1.2.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^2.6.1",
